# arm-performance-measurments

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
arm-test/: Cargo.toml  memory.x
arm-test/src/: main.rs
my-app/: Cargo.toml
my-app/testsuite/: Cargo.toml
my-app/testsuite/src/: lib.rs
my-app/testsuite/tests/: test.rs
performance-measurements/: Cargo.toml
performance-measurements-systic/: Cargo.toml  README.md
performance-measurements-systic/.cargo/: config.toml
performance-measurements-systic/testsuite/: Cargo.toml
performance-measurements-systic/testsuite/src/: lib.rs
performance-measurements-systic/testsuite/tests/: test.rs
performance-measurements/testsuite/: Cargo.toml
performance-measurements/testsuite/src/: lib.rs
performance-measurements/testsuite/tests/: test.rs
periodic_tasks/: Cargo.toml
periodic_tasks/testsuite/: Cargo.toml
periodic_tasks/testsuite/src/: lib.rs
periodic_tasks/testsuite/tests/: test.rs
qemu-test/: Cargo.toml  agi.asm  agi.rec  agi_dump.asm  gdb.txt  run_trace.sh
qemu-test/src/: main.rs
