[package]
name = "arm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
stm32f1 = {version = "0.15.1", features = ["rt","stm32f103"]}
systick-monotonic = {version = "1.0.1"}
